@@ -2,6 +2,6 @@ package io.eventuate.messaging.redis.spring.common;
 
 public class RedisUtil {
   public static String channelToRedisStream(String topic, int partition) {
-    return String.format("eventuate-tram:channel:%s-%s", topic, partition);
+    return "eventuate-tram:channel:%s-%s".formatted(topic, partition);
   }
 }
