@@ -2,18 +2,18 @@ package io.eventuate.messaging.redis.spring.consumer;
 
 public class RedisKeyUtil {
   public static String keyForMemberGroupSet(String groupId) {
-    return String.format("eventuate-tram:group:members:%s", groupId);
+    return "eventuate-tram:group:members:%s".formatted(groupId);
   }
 
   public static String keyForGroupMember(String groupId, String memberId) {
-    return String.format("eventuate-tram:group:member:%s:%s", groupId, memberId);
+    return "eventuate-tram:group:member:%s:%s".formatted(groupId, memberId);
   }
 
   public static String keyForAssignment(String groupId, String memberId) {
-    return String.format("eventuate-tram:group:member:assignment:%s:%s", groupId, memberId);
+    return "eventuate-tram:group:member:assignment:%s:%s".formatted(groupId, memberId);
   }
 
   public static String keyForLeaderLock(String groupId) {
-    return String.format("eventuate-tram:leader:lock:%s", groupId);
+    return "eventuate-tram:leader:lock:%s".formatted(groupId);
   }
 }
